--- a/index.html
+++ b/index.html
@@ -10,6 +10,42 @@
   <title>VEXOR | Independent Workforce, Capability & Execution Audits</title>
   <meta name="description"
     content="VEXOR is an independent audit firm conducting employee, team, and organizational evaluations to assess workforce capability, role alignment, and execution readiness." />
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "VEXOR",
+    "url": "https://vexor.global/",
+    "logo": "https://vexor.global/logo.png",
+    "description": "VEXOR is an independent audit firm conducting structured employee, team, and organizational audits to evaluate capability alignment, execution readiness, and workforce risk. VEXOR does not provide consulting, recruitment, coaching, or implementation services.",
+    "foundingDate": "2025",
+    "foundingLocation": {
+      "@type": "Place",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "New Delhi",
+        "addressCountry": "IN"
+      }
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "New Delhi",
+      "addressCountry": "IN"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/vexor-global/"
+    ],
+    "industry": "Independent Workforce & Capability Audits",
+    "knowsAbout": [
+      "Capability Audits",
+      "Workforce Risk Assessment",
+      "Execution Readiness Audits",
+      "Leadership and Team Evaluation",
+      "Organizational Audits"
+    ]
+  }
+  </script>
+
   <link rel="stylesheet" href="styles.css" />
   <style>
     .section-divider {
