--- a/faq.html
+++ b/faq.html
@@ -9,6 +9,15 @@
     content="Answers to common questions about VEXOR’s independent workforce, team, and organizational audit process." />
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DVV24HMQV6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-DVV24HMQV6');
+  </script>
   <style>
     footer {
       padding: 48px 6%;
