--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
   </script>
 
   <link rel="stylesheet" href="styles.css" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DVV24HMQV6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-DVV24HMQV6');
+  </script>
   <style>
     .section-divider {
       border: none;
